--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginTop="-1dp"
         android:onClick="bmi"
-        android:text="CALCUATE BMI"
+        android:text="CALCULATE BMI"
         app:layout_constraintLeft_toLeftOf="@+id/ed_height"
         app:layout_constraintTop_toBottomOf="@+id/ed_height" />
 
